--- a/SG_Property_Assistant/pages/TabRecommend/loanResultPage/loanResultPage.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/loanResultPage/loanResultPage.wxml
@@ -4,22 +4,22 @@
   <text class="return_monthly">每月应还</text>
 
   <view class="zongeo">
-    <text class="total_yuan">8901.09</text>
-    <text>元</text>
+    <text class="total_yuan">{{p}}</text>
+    <text>新币</text>
   </view>
 
   <view class='result_background'>
     <view class="totalAmount">
       <text>贷款总额</text>
-      <text>100万</text>
+      <text>{{totalNumber}}万</text>
     </view>
-    <view class="totalAmount">
+    <!-- <view class="totalAmount">
       <text>利息总额</text>
       <text>100万</text>
-    </view>
+    </view> -->
     <view class="totalAmount">
       <text>贷款年限</text>
-      <text>30年</text>
+      <text>{{loanTerm}}年</text>
     </view>
   </view>
 
@@ -33,15 +33,15 @@
   </view>
   <view class="daikuai_item">
     <text>贷款金额</text>
-    <text>100万</text>
+    <text>{{totalNumber}}万</text>
   </view>
   <view class="daikuai_item">
     <text>贷款年限</text>
-    <text>30年</text>
+    <text>{{loanTerm}}年</text>
   </view>
   <view class="daikuai_item">
     <text>贷款利息</text>
-    <text>基本利息4.9%</text>
+    <text>基本利息{{interestNuber}}%</text>
   </view>
 
 </view>
