--- a/SG_Property_Assistant/pages/TabSearch/searchResult/searchResult.wxss
+++ b/SG_Property_Assistant/pages/TabSearch/searchResult/searchResult.wxss
@@ -178,7 +178,7 @@ page {
 
 .tab_bar .tab_tit text.active,.price text.active,.guide text.active  {
   color: #a45c24;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .price {
