--- a/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxml
@@ -28,7 +28,7 @@
   <image class="map" src="{{trafficMapUrl}}"></image>
 
   <view class="north_line">
-    <text wx:for="{{amenities.mrts}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    <text wx:for="{{amenities.mrts}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
   </view>
 </view>
 
@@ -40,7 +40,7 @@
   </view>
   <image class="map" src="{{schoolMapUrl}}"></image>
   <view class="north_line">
-    <text wx:for="{{amenities.schools}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    <text wx:for="{{amenities.schools}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
   </view>
 </view>
 
@@ -52,7 +52,7 @@
   </view>
   <image class="map" src="{{medicalMapUrl}}"></image>
   <view class="north_line">
-    <text wx:for="{{amenities.hospitals}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    <text wx:for="{{amenities.hospitals}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
   </view>
 </view>
 
@@ -64,6 +64,6 @@
   </view>
   <image class="map" src="{{shoppingMapUrl}}"></image>
   <view class="north_line">
-    <text wx:for="{{amenities.malls}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    <text wx:for="{{amenities.malls}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
   </view>
 </view>
