--- a/SG_Property_Assistant/pages/news/news.wxml
+++ b/SG_Property_Assistant/pages/news/news.wxml
@@ -3,7 +3,7 @@
     <!-- 单条数据 -->
     <view class='inner_li flex_row'>
       <view class='list-img-loaded'>
-        <image src='../../temp/1.png'></image>
+        <image src='/images/default.jpg'></image>
       </view>
       <view class='flex_col'>
         <text class='intro_title'>俯瞰曼哈顿天际线 – Avora豪华公寓实地考察
@@ -14,7 +14,7 @@
 
     <view class='inner_li flex_row'>
       <view class='list-img-loaded'>
-        <image src='../../temp/2.png'></image>
+        <image src='/images/default.jpg'></image>
       </view>
       <view class='flex_col'>
         <text class='intro_title'>旧金山湾区：烧毁的房子也能卖80万美金？！</text>
