--- a/SG_Property_Assistant/pages/TabMy/TabMy.wxml
+++ b/SG_Property_Assistant/pages/TabMy/TabMy.wxml
@@ -37,13 +37,13 @@
 <!--常用操作 url='{{listOperation[2][index]}}?title={{item}}' -->
 <view class="page_list weui-cells weui-cells_after-title">
   <block wx:for="{{listOperation[1]}}" wx:key="key">
-    <navigator catchtap='myJumpTap' data-index='{{index}}' data-page="{{listOperation[2][index]}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view catchtap='myJumpTap' data-index='{{index}}' data-page="{{listOperation[2][index]}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd">
         <image class='list_image' src="{{listOperation[0][index]}}"></image>
       </view>
       <view class="weui-cell__bd">{{item}}</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">{{listOperation[3][index]}}</view>
-    </navigator>
+    </view>
   </block>
 </view>
 
