--- a/SG_Property_Assistant/pages/TabMy/focusPublicNumberPage/focusPublicNumberPage.wxss
+++ b/SG_Property_Assistant/pages/TabMy/focusPublicNumberPage/focusPublicNumberPage.wxss
@@ -4,3 +4,12 @@
   height: 100vh;
   width: 100vw;
 }
+
+.erWeiMaTap{
+  width: 340rpx;
+  height: 340rpx;
+}
+
+.iamge_div{
+  text-align: center
+}
