--- a/SG_Property_Assistant/pages/TabNotice/noticeDetails/noticeDetails.wxss
+++ b/SG_Property_Assistant/pages/TabNotice/noticeDetails/noticeDetails.wxss
@@ -1,7 +1,7 @@
 page{background: #f5f5f5;}
 .icon_left  { width: 120rpx; margin-right: 20rpx; margin-top: 10px;}
 .icon_left  image{ width: 90rpx; height: 90rpx;}
-.notice_butt { height: 34px; text-align: center; line-height: 34px; font-size: 12px; border-radius: 10rpx; margin-top: 40rpx; }
+.notice_butt { height: 34px; line-height: 34px; font-size: 12px; border-radius: 10rpx; margin-top: 40rpx; }
 .butt_already { border: 1px solid #e5e5e5; color: #999; }
 .not_describe { font-size: 14px; color: #999;}
 .eonet{ background: #fff; border-radius: 10rpx; padding: 30rpx; position:relative;}
@@ -9,8 +9,7 @@ page{background: #f5f5f5;}
 .triangle_left{ width: 0px; height: 0px; left: -10px; top: 20px; border: 5px solid transparent;border-right: 5px solid #fff; position: absolute;}
 .text_coler{ font-size: 17px; color: #666; line-height: 26px;}
 .not_immediate{
-  background: #008489;
-  color: #fff;
+  color: #666;
 }
 .butt_already {
   border: 1px solid #e5e5e5;
