--- a/SG_Property_Assistant/pages/TabRecommend/TabRecommend.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/TabRecommend.wxml
@@ -48,12 +48,12 @@
     <image class='background' src="/images/fc_budget_estimation.png"></image>
     <text class="conmt-space">查看你的购房资格</text>
   </view>
-  <view class="item_class" data-page="../news/news" catchtap='jumpCalculatorToolTap'>
+  <view class="item_class" data-link="https://mp.weixin.qq.com/mp/homepage?__biz=MzU0Mjg2NDc4OA==&hid=2&sn=89963360e32e0a490bdbff7450198e0a&scene=18" catchtap='jumpLinkTap'>
     <text class="item_jsq">知识库</text>
     <image class='background' src="/images/fc_knowledge_base.png"></image>
     <text class="conmt-space">买房租房需要注意什么</text>
   </view>
-  <view class="item_class" data-page="../news/news" catchtap='jumpCalculatorToolTap'>
+  <view class="item_class" data-link="https://mp.weixin.qq.com/mp/homepage?__biz=MzU0Mjg2NDc4OA==&hid=2&sn=89963360e32e0a490bdbff7450198e0a&scene=18" catchtap='jumpLinkTap'>
     <text class="item_jsq">最新新闻</text>
     <image class='background' src="/images/fc_hmeo_new.png"></image>
     <text class="conmt-space">最新的房产资讯</text>
