--- a/SG_Property_Assistant/pages/TabRecommend/helpMeFindRoom/helpMeFindRoom.wxss
+++ b/SG_Property_Assistant/pages/TabRecommend/helpMeFindRoom/helpMeFindRoom.wxss
@@ -59,6 +59,12 @@
   margin-bottom: 30rpx;
 }
 
+.dl_content text.alternative {
+  color: #a45c24;
+  border: 1px solid #a45c24;
+  background: #fff;
+}
+
 .dl_content text:last-child {
   margin-right: 0rpx;
 }
@@ -118,12 +124,62 @@
   line-height: 100rpx;
 }
 
-.dl_content text.range_nbmer{
+.dl_content text.range_nbmer {
   font-size: 40rpx;
-  color: #A45C24;
+  color: #a45c24;
   border: none;
   background: #fff;
   text-align: center;
   display: block;
   font-weight: 500;
+}
+
+.movable_view {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60rpx;
+  width: 60rpx;
+  border-radius: 30rpx;
+  background: #fff;
+  color: #a45c24;
+  font-size: 24rpx;
+  position: absolute;
+  top: -26rpx;
+  z-index: 2; 
+  border: 1px solid #eee;
+  box-shadow: 0 0 4px #eee;
+}
+
+.slider {
+  height: 10rpx;
+  background: #a45c24;
+  /* width: 200rpx; */
+  z-index: 0;
+}
+
+movable-area {
+  height: 10rpx;
+  width: 100%;
+  background-color: #eee;
+  position: relative;
+  margin-top: 60rpx;
+  margin-bottom: 40rpx;
+  border-radius: 5rpx;
+}
+
+.huanwei text.jiage {
+  border: none;
+  background: none;
+  padding-left: 0xpx;
+  padding-right: 0xpx;
+  text-align: left;
+  font-size: 30rpx;
+  display: inline-block;
+  margin: 0px;
+}
+
+.huanwei {
+  display: flex;
+  justify-content: space-between;
 }
